test/tests/compiler/5_local_variables/valid/extra_credit/bitwise_shiftr_assign.plx
pub fn main(none) i32 {
    var_to_shift: i32 = 1234
    x: i32 = 0
    x = var_to_shift >> 4
    return x
}
