test/tests/compiler/5_local_variables/invalid_parse/plx1_missing_var_name.plx
pub fn main(none) i32 {
    :i32 = 0
}
